# XiHe

./: .gitignore  .pre-commit-config.yaml  README.md  distributed_pretrain.py  download_arxiv.py  example_conf.toml  layer_norm.py  load_dataset_then_save_it.py  multi_head_attention.py  pretrain.py  pyproject.toml  rms_norm.py  scaled_dot_product_attention.py  stream_dataset.ipynb  test_packing_dataset.txt  validation_model.toml
tests/: common.py  test_checkpoint.py  test_cosine_scheduler.py  test_dataloader.py  test_dataset.py  test_defs.py  test_model.py  test_retriever.py  test_settings.py  test_tokenizer.py  test_trainer.py  test_wandb.py
xihe/: defs.py  logger.py  schemas.py  settings.py
xihe/ckpt/: __init__.py  checkpoint.py  checkpointer.py
xihe/dataset/: __init__.py  arxiv.ipynb  dataloader.ipynb  dataloader.py  dataset.py  factory.py
xihe/model/: __init__.py  model.py  retriever.py
xihe/optimizer/: __init__.py  optimizer.py
xihe/tokenizer/: __init__.py  factory.py  train_byte_level_bpe_tokenizer.py
xihe/trainer/: __init__.py  basic_trainer.py  distributed_trainer.py  optimizer.py  trainer.py
xihe/utils/: rng.py  wandb.py
