[project]
name = "xihe"
version = "0.1.0"
description = "Instruct-XiHe 120M, My First LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "huggingface-hub[cli]>=0.33.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
]

# 现在服务器上的nvidia驱动版本比较低，先这样将就着吧，等代码写完了，升级一下驱动就好了
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

# https://discuss.pytorch.org/t/which-cuda-version-to-choose-when-installing-pytorch/217257
# cu12.6现在是pytroch的默认cuda版本，比较稳定比较好
# cu12.8，除非你有50系的GPU，必须用12.8，否则还是别用了
[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
